--- a/front-end/src/locales/en.json
+++ b/front-end/src/locales/en.json
@@ -1,3 +1,11 @@
 {
-  "message": "i am hasib"
+  "message": "i am hasib",
+  "toolbar": {
+    "mission": "mission",
+    "product": "products",
+    "calendar": "calendar",
+    "studio": "studio",
+    "reforest": "reforestation"
+  },
+  "btnTitle": "I plant a tree for free"
 }
