--- a/front-end/src/locales/fr.json
+++ b/front-end/src/locales/fr.json
@@ -1,3 +1,11 @@
 {
-  "message": "mera hasib"
+  "message": "mera hasib",
+  "toolbar": {
+    "mission": "mission",
+    "product": "produits",
+    "calendar": "calendrier",
+    "studio": "studio",
+    "reforest": "reforestation"
+  },
+  "btnTitle": "Je plante un arbre gratuitement"
 }
